# UAVision

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/UAVision/: __init__.py  mcda_midbin_all.txt  preprocess.py  utils.py
src/UAVision/bin_edges/: mcda_midbin_all.txt  opcN2_binedges.txt  pops_binedges.txt
src/UAVision/bme/: preprocess.py
src/UAVision/cpc/: preprocess.py
src/UAVision/mavic/: __init__.py  merge_sensor_data.py  merge_wind_data.py  opcN3_binedges.txt  preprocess.py
src/UAVision/mcda/: __init__.py  preprocess.py
src/UAVision/pops/: __init__.py  preprocess.py
