[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UAVision"
version = "1.0.2"
description = "UAV instrument data processing"
readme = "README.md"
authors = [{ name = "VIET LE", email = "viet.le@fmi.fi" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["numpy", "matplotlib", "pandas"]

[tool.setuptools.packages.find]
where = ["src/"]